# autodocx

./: .env.example  .gitignore  .gitleaks.toml  CONSTELLATION_FUTURE_STATE.md  DEVELOPER_ONBOARDING.md  PIPELINE_REFACTOR_TODO.md  README.md  RELATIONSHIP_PLAN.md  UPGRADE_ROADMAP.md  WORKSTREAM_PLAN.md  autodocx.yaml  developer_onboarding_context.md  pyproject.toml  requirements.txt  tmp-order-flow.xml  tree.md  tree2.md
.example_solution/: config.yaml
Technical_Dox/: 01-CORE-STANDARDS.json  README-Guide_for_Technical_Doc_Gen.md  __main__.py  artifacts.json  autodocx.yaml  base.py  builder.py  business_renderer.py  config_loader.py  distance_features.py  graphviz_flows.py  grouping.py  logicapps.py  mkdocs.py  option1.py  rollup.py  test_renderer_frontmatter.py  test_visual_marker_matching.py  tibco_bw.py  types.py
analysis/: azure_functions_relationships.md  baseline_component_grouping.md  baseline_extractor_fidelity.md  baseline_graph_health.md  baseline_llm_rollup.md  baseline_renderer_output.md  baseline_verification_tooling.md  business_doc_upgrade.md  graphviz_port_upgrade.md  logicapps_relationships.md  pipeline_sql_relationships.md  postchange_component_grouping.md  postchange_extractor_fidelity.md  postchange_graph_health.md  postchange_llm_rollup.md  postchange_renderer_output.md  postchange_verification_tooling.md  relationships_baseline.md  renderer_relationships.md  scan_snapshot.json  tests_2025-11-13.md  tree_sitter_plan.md  ui_integration_validation.md  wsl_readiness.md
autodocx/: config_loader.py  registry.py  tree_sitter_support.py  types.py
autodocx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autodocx_cli/: __main__.py
plans/: CONSOLIDATED_OPEN.md
scripts/: check_logicapps_relationships.py  check_scaffold_coverage.py  out_reorganizer.py  render_relationship_demo.py  run_fixture_scans.py  setup_wsl.sh
tests/: test_anti_patterns.py  test_archive_handling.py  test_aws_lambda_extractor.py  test_azure_functions_relationships.py  test_azure_pipelines_relationships.py  test_biztalk_logicapps_extractor.py  test_business_entities_extractor.py  test_bw_archive_extractor.py  test_bw_module_manifest_extractor.py  test_bw_scaffold_minimums.py  test_component_hierarchy_guard.py  test_components.py  test_constellation_service.py  test_curated_doc_sections.py  test_deterministic_narrative.py  test_doc_plan.py  test_evidence_packets.py  test_express_extractor.py  test_extrapolations.py  test_family_docs_renderer.py  test_flow_export_ports.py  test_flow_renderer_ports.py  test_github_actions_extractor.py  test_golden_bw_fixtures.py  test_integration_imports_extractor.py  test_interdeps_builder.py  test_interdeps_calls_logging.py  test_k8s_manifests_extractor.py  test_llm_guards.py  test_logicapps_extractor.py  test_logicapps_extractor_relationships.py  test_mulesoft_extractor.py  test_power_automate_extractor.py  test_powerbuilder_extractor.py  (+20 more)
(+1097 files in other folders)
